# sfem

./: .JuliaFormatter.toml  .clang-format  .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.txt  LICENSE  Makefile  PRD.md  README.md  TASKS.md  TODO.md  argsort.cpp  assemble.c  assemble3.c  assemble4.c  condense_matrix.c  condense_vector.c  crs_graph.c  crs_graph.h  cuda_laplacian.cu  dirichlet.c  dirichlet.h  idx_to_indicator.c  isotropic_phasefield_for_fracture.c  isotropic_phasefield_for_fracture.h  laplacian.c  laplacian.h  mass.c  mass.h  mesh_to_blocks  neohookean.c  neohookean.h  neumann.c  neumann.h  partition.c  read_mesh.c  read_mesh.h  refine.c  (+24 more)
.github/: copilot-instructions.md
algebra/: argsort.cpp  argsort.h  condense_matrix.c  crs_graph.c  crs_graph.cpp  crs_graph.h  cuda_spmv.cu  inverse.c  inverse.cpp  lumped_ptdp.cpp  lumped_ptdp.h  lumped_ptdp.hpp  multiblock_crs_graph.c  multiblock_crs_graph.cpp  multiblock_crs_graph.h  multiblock_crs_graph.hpp  remove_duplicates.c  sfem_Buffer.hpp  sfem_Chebyshev3.hpp  sfem_CooSym.hpp  sfem_GaussSeidel.hpp  sfem_LpSmoother.hpp  sfem_MPIType.hpp  sfem_MatrixFreeLinearSolver.hpp  sfem_MixedPrecisionShiftableBlockSymJacobi.hpp  sfem_Multigrid.hpp  sfem_Operator.hpp  sfem_PointJacobi.hpp  sfem_PowerMethod.hpp  sfem_ShiftableJacobi.hpp  sfem_ShiftedPenalty.hpp  sfem_ShiftedPenaltyMultigrid.hpp  sfem_SparseBlockVector.hpp  sfem_Stationary.hpp  sfem_bcgs.hpp  sfem_bcrs_sym_SpMV.hpp  sfem_bsr_SpMV.hpp  sfem_cg.hpp  sfem_crs_SpMV.hpp  sfem_crs_sym_SpMV.hpp  (+14 more)
amg/: coo_sort.c  coo_sort.cpp  coo_sort.hpp  coo_weight_sort.h  host_sort.c  host_sort.cpp  interpolation.c  interpolation.h  mg_builder.c  mg_builder.cpp  mg_builder.h  mg_builder.hpp  partitioner.c  partitioner.cpp  partitioner.h  partitioner.hpp  sfem_pwc_interpolator.cpp  sfem_pwc_interpolator.hpp  smoothed_aggregation.c  smoothed_aggregation.h  smoother.c  smoother.cpp  smoother.h  sparse.c  sparse.h  test.c
base/: sfem_base.c  sfem_base.cpp  sfem_base.h  sfem_base.hpp  sfem_cuda_base.h  sfem_cuda_base.hpp  sfem_defs.h  sfem_defs.hpp  sfem_logger.c  sfem_logger.cpp  sfem_logger.h  sfem_macros.h  sfem_test.h  sfem_test.hpp  sfem_unroll.hpp  sfem_utils.c  sfem_utils.h  sfem_vec.h  sfem_vec.hpp
baseline/: streambench.sh
benchmark/: baseline.cu  clear.sh  histo_bench.py  initialize.sh  measure_perf.sh  plot_bench.py  plot_tpl.tex  roofline.py
build_release/: CTestTestfile.cmake  FIXME_hex8_smooth  Makefile  SFEMConfig.cmake  ale  approxsdf  bench_op  cmake_install.cmake  compare_refine4.csv  count_element_to_node_incidence  create_mask  create_ring_mesh  create_sideset  do_spmv  hex8_cauchy_stress  hex8_extrude_mesh  hex8_fix_ordering  hex8_to_tet4  hierarchical_prolongation  hierarchical_restriction  laplacian_apply  mesh_function_example  mgsolve  nitsche_flow  obs  obstacle  run_cantilever_tests.sh  run_linear_elasticity_refine_tests.sh  run_refine_level_tests.sh  run_test_single.sh  run_timedep_tests.sh  sdf_obstacle  self_contact  sfem.trace.csv  sfem_AMGTest  sfem_CantileverKVTest  sfem_CantileverTest  sfem_DirichletConditionsTest  sfem_GalerkinAssemblyTest  sfem_MGSDFContactTest  (+27 more)
cmake/: CodeCoverage.cmake  FindISolver.cmake  FindMatrixIO.cmake  GenerateMakeConfig.cmake  InstallMakefileConfig.cmake  PostInstall.cmake  SFEMBuildTypes.cmake  SFEMCMakeFunctions.cmake  SFEMCompilerFeatures.cmake  SFEMConfig.cmake.in  SFEMDefaults.cmake  SFEMDependencies.cmake  SFEMNumbers.cmake  SFEMOptions.cmake  SFEMPython.cmake  SFEMSanitizer.cmake  SFEMTestCoverage.cmake  SFEMVersion.cmake  TestInstall.cmake
configuration/: sfem_config.h.in  sfem_config.hpp.in  sfem_config.py.in  sfem_config.sh.in  sfem_version.hpp.in
drivers/: aos_to_soa.c  aos_to_soa.exe.cpp  assemble.c  assemble.exe.cpp  assemble3.c  assemble3.exe.cpp  assemble4.c  assemble4.exe.cpp  assemble_adjaciency_matrix.c  assemble_adjaciency_matrix.exe.cpp  axpy.exe.cpp  bench_grad.exe.cpp  bgs.c  bgs.exe.cpp  cauchy_stress.c  cauchy_stress.exe.cpp  cdiv.c  cdiv.exe.cpp  cgrad.c  cgrad.exe.cpp  condense_matrix.c  condense_matrix.exe.cpp  condense_vector.c  condense_vector.exe.cpp  count_element_to_node_incidence.cpp  cprincipal_strains.c  cprincipal_strains.exe.cpp  cprincipal_stresses.c  cprincipal_stresses.exe.cpp  create_dual_graph.c  create_dual_graph.exe.cpp  create_element_adjaciency_table.c  create_element_adjaciency_table.exe.cpp  create_mask.exe.cpp  create_ring_mesh.exe.cpp  create_surface_from_element_adjaciency_table.c  create_surface_from_element_adjaciency_table.exe.cpp  crs_apply_dirichlet.c  crs_apply_dirichlet.exe.cpp  cshear.c  (+121 more)
eigen/: README.md  aorta.sh  clean_workspace.sh  create_adj_matrix.py  create_adj_matrix_2D.py  cylinder.sh  dense_graph_analysis.py  example_1D.sh  example_2D.sh  graph_analysis.py  gsp.sh  makemovie.py  plot_images.py  plot_surface.py  plot_vectors.py  project.py  project.sh  rectangle.sh  sphere.sh
examples/: run_convection_diffusion.c  run_convection_diffusion.cpp  run_convection_diffusion.sh  run_convection_diffusion_2D.sh  run_convection_diffusion_3D.sh  run_poisson.cpp  run_poisson.sh  run_poisson_cuda.cpp
frontend/: sfem_API.hpp  sfem_CRSGraph.cpp  sfem_CRSGraph.hpp  sfem_Communicator.cpp  sfem_Communicator.hpp  sfem_Constraint.cpp  sfem_Constraint.hpp  sfem_ContactConditions.cpp  sfem_ContactConditions.hpp  sfem_ContactSurface.cpp  sfem_ContactSurface.hpp  sfem_Context.cpp  sfem_Context.hpp  sfem_DirichletConditions.cpp  sfem_DirichletConditions.hpp  sfem_Env.cpp  sfem_Env.hpp  sfem_ForwardDeclarations.hpp  sfem_Function.cpp  sfem_Function.hpp  sfem_FunctionSpace.cpp  sfem_FunctionSpace.hpp  sfem_Grid.cpp  sfem_Grid.hpp  sfem_Input.cpp  sfem_Input.hpp  sfem_KelvinVoigtNewmark.cpp  sfem_KelvinVoigtNewmark.hpp  sfem_Mesh.cpp  sfem_Mesh.hpp  sfem_NeumannConditions.cpp  sfem_NeumannConditions.hpp  sfem_Packed.cpp  sfem_Packed.hpp  sfem_Parameters.cpp  sfem_Parameters.hpp  sfem_Path.cpp  sfem_Path.hpp  sfem_Restrict.cpp  sfem_Restrict.hpp  (+14 more)
gpu_test/: test.sh  test_apply.sh  test_assemble.sh
mesh/: sfc.c  (+57 more)
python/bindings/: CMakeLists.txt  pysfem.cpp
(+1752 files in other folders)
